apps/invidious/deployment.yaml
---
# Source: invidious/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invidious
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: invidious
  template:
    metadata:
      labels:
        app.kubernetes.io/name: invidious
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: invidious
        image: "quay.io/invidious/invidious:latest"
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        # resources:
        readinessProbe:
          httpGet:
            port: 3000
            path: /
        livenessProbe:
          httpGet:
            port: 3000
            path: /
          initialDelaySeconds: 15
      restartPolicy: Always
