apps/invidious/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invidious
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app.kubernetes.io/name: invidious
