apps/invidious/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invidious
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - invidious.samcday.com
    secretName: invidious-tls
  rules:
  - host: invidious.samcday.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: invidious
            port:
              number: 3000
